Fixed scrollbars coming up when swiping

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,19 @@
     padding: 0;
 }
 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar space */
+    background: transparent; /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #ff0000;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     font-size: 1rem;
